# remote_command

./: .clang-format  CMakeLists.txt  LICENSE  README.md
client/src/: main.cpp
include/: connection.hpp
server/src/: main.cpp
